feat: add basic api plugin

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
-LISTEN_ADDR=127.0.0.1:8081
+LISTEN_ADDR=127.0.0.1:8080
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_USER=resul
-DB_PASSWORD=123qwe#@!
+DB_USER=stock
+DB_PASSWORD=stock
 DB_DATABASE=chat
