--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/webrtc": "^0.0.31",
+    "gitart-vue-dialog": "^2.3.1",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12"
   },
