refactor: frontend code

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,6 +5,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "allowJs": true,
+    "lib": ["esnext"],
     "paths": {
       "@/*": ["./src/*"]
     }
